pxc/tests/test_25_slice/set1.px

namespace tparam;
import test_common "";

function void test1()
{
  vector{int} x;
  vector{int} y;
  x.resize(1000);
  y.resize(1000);
  slice{int} xs = x[0..100];
  slice{int} ys = y[0..100];
  ys = xs; // error
}

